--- a/style.css
+++ b/style.css
@@ -1,10 +1,34 @@
-.titulo-principal {
-	padding-left: 20px;
+header {
+	background-color: #CCCCCC;
+	padding: 20px 0;
+	margin: 20px 0 20px 0;
 }
-#pcgamer {
-	width: 100%;
-	height: 400px;
-	
+
+.caixa {
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+
+}
+
+h1 {
+	position: relative;
+	top: -100px;
+}
+
+nav {
+	position: absolute;
+	top: 100px;
+	right: 0;
+}
+
+nav li {
+	position: relative;
+	display: inline;
+	top: 20px;
+	right: 20px;
+	text-transform: uppercase;
+
 }
 
 .titulo-centralizado {
