--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header {
-	background-color: #CCCCCC;
+	background-color: #BBBBBB;
 	padding: 20px 0;
-	margin: 20px 0 20px 0;
+	margin: 0 auto;
 }
 
 .caixa {
@@ -11,24 +11,34 @@ header {
 
 }
 
-h1 {
-	position: relative;
-	top: -100px;
-}
-
 nav {
 	position: absolute;
-	top: 100px;
+	top: 110px;
 	right: 0;
 }
 
-nav li {
-	position: relative;
-	display: inline;
-	top: 20px;
-	right: 20px;
-	text-transform: uppercase;
+nav a {
+	color: #000000;
+	text-decoration: none;
 
+}
+
+nav li {
+	display: inline;
+	list-style-type: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 20px;
+
+}
+
+a:hover {
+	text-decoration: strong;
+	font-size: 24px;
+}
+
+a:visited {
+	color:  blueviolet;
 }
 
 .titulo-centralizado {
