--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,26 @@
 header {
 	background-image: url(fundao.png); /*isso coloca uma imagem no fundo*/
-	background-color: #BBBBBB;
-	padding: 0px 0;
+	width: 100%;
+	height: 130px;
+	background-size: 50%;
 	margin: 0 auto;
 }
 
-.caixa {
-	position: relative;
-	width: 940px;
-	margin: 0 auto;
+h1 {
+	position: absolute;
+	width: 100%;
+	transform: scale(0.8);
+	top: 10px;
 
 }
 
 nav {
 	position: absolute;
-	top: 110px;
-	right: 0;
-}
-
-nav a {
+	top: 60px;
+	margin-left: 1000px;
 	color: #0000FF;
 	text-decoration: none;
-
+	
 }
 
 nav li {
@@ -42,27 +41,36 @@ a:visited {
 	color:  blue;
 }
 
-.titulo-centralizado {
+.titulo-principal {
 	text-align: center;
-	font-size: 35px;
-	margin-top: 10px;
+	position: relative	;
+	font-size: 2em;
+	margin: 1px 0 1em;
 	text-decoration: bold;
-	padding: 50px;
-
-
+	top: 10px;
 }
 
 .sobre {
-	font-size: 20px;
-	text-align: center;
-	position: relative;
-	line-height: 20px;
+	background-color: linen;
+	width: 100%;
+	height: 500px;
+}
 
+.sobre p{
+	margin: 0 0 1em;
+	text-align: center;
+}
+
+.sobre strong{
+	font-weight: bold;
+}
+
+.sobre em {
+	font-style: italic;
 }
 
 #missao {
 	font-size: 25px;
-
 
 }
 
@@ -71,16 +79,10 @@ em strong {
 	text-decoration: underline;
 }
 
-.textim {
+.copiuter {
 	position: absolute;
-	font-weight: bold;
-	cursor: pointer;
-	line-height: 30px;
-	text-align: center;
-	font-size: 2rem;
-	display: inline-block
-	
-
+	width: 100%;
+	height: 100%;
 }
 
 footer {
