--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 header {
-	background-image: url(fundao.png); /*isso coloca uma imagem no fundo*/
+	background-color: #4feba5;
 	width: 100%;
 	height: 130px;
-	background-size: 50%;
 	margin: 0 auto;
 }
 
@@ -18,28 +17,35 @@ nav {
 	position: absolute;
 	top: 60px;
 	margin-left: 1000px;
-	color: #0000FF;
+	color: #0000AA;
 	text-decoration: none;
-	
 }
 
 nav li {
 	display: inline;
-	list-style-type: none;
 	text-transform: uppercase;
 	font-weight: bold;
+	margin: 0 0 0 5px;
 	font-size: 20px;
+	font-style: none;	
 
+}
+
+nav a{
+	text-decoration: strong;
+	text-decoration: none;
 }
 
 a:hover {
 	text-decoration: strong;
-	font-size: 24px;
+	font-size: 24px; 
+	text-decoration: underline;
 }
 
-a:visited {
-	color:  blue;
+.placa-mae {
+	
 }
+
 
 .titulo-principal {
 	text-align: center;
@@ -51,7 +57,7 @@ a:visited {
 }
 
 .sobre {
-	background-color: linen;
+	background-color: #dbf9f5;
 	width: 100%;
 	height: 500px;
 }
@@ -81,9 +87,24 @@ em strong {
 
 .copiuter {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	margin: 20px 20px 20px 20px;
+	width: 30%;
+	float: left;
+
 }
+
+.frase-transparente {
+	text-transform: bold;
+	
+	font-size: 20px;
+
+}
+
+.titulo-vantagens {
+	text-align: center;
+}
+
+
 
 footer {
 	text-align: center;
