--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+	font-family: 'Montserraf', sans-serif;
+}
 header {
 	background-color: #4feba5;
 	width: 100%;
@@ -5,23 +8,22 @@ header {
 	margin: 10px auto;
 }
 
+.caixa {
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+}
+
 .logo {
 	position: absolute;
 	transform: scale(0.8);
 	top: 20px;
 }
-h1 {
-	position: absolute;
-	width: 100%;
-	transform: scale(1.2);
-	top: 10px;
-
-}
 
 nav {
-	position: absolute;
+	position: relative;
 	top: 60px;
-	margin-left: 1000px;
+	text-align: right;
 	color: #0000AA;
 	text-decoration: none;
 }
@@ -50,65 +52,57 @@ a:hover {
 .placa-mae {
 	position: relative;
 	width: 100%;
-	height: 80%;
+	height: 300px;
 }
 
 .titulo-principal {
-	text-align: center;
 	position: relative	;
-	font-size: 2em;
-	margin: 1px 0 1em;
-	text-decoration: bold;
-	top: 10px;
-}
-
-.sobre {
-	background-color: #dbf9f5;
 	width: 100%;
-	height: 500px;
-
-}
-
-.sobre p{
-	margin: 0 0 1em;
+	top: 20px;
 	text-align: center;
-}
-
-.sobre strong{
-	font-weight: bold;
-}
-
-.sobre em {
-	font-style: italic;
-}
-
-.missao {
-	font-size: 25px;
-}
-
-em strong {
-	color: #FF0000;
-	text-decoration: underline;	
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
 }
 
 .copiuter {
 	position: relative;
 	margin: 20px 20px 20px 20px;
-	width: 25%;
+	width: 20%;
 	float: left;
 }
 
-.frase-transparente {
-	text-transform: bold;
-	
-	font-size: 20px;
+.sobre {
+	background-color: #dbf9f5;
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
 
 }
 
-.titulo-vantagens {
+.sobre p {
+	font-size: 20px;
+	margin: 0 0 1em;
 	text-align: center;
 }
 
+.sobre strong {
+	text-decoration: bold;
+}
+
+.sobre em {
+	font-style: italic;
+	text-decoration: underline;
+	color: seagreen;
+	font-size: 1em;
+}
+
+.vantagens p {
+	text-transform: bold;
+	font-size: 20px;
+	text-align: center;
+
+}
 
 footer {
 	text-align: center;
