--- a/css/style.css
+++ b/css/style.css
@@ -56,25 +56,6 @@ a:hover {
 	height: 300px;
 }
 
-.titulo-principal {
-	position: relative	;
-	width: 100%;
-	top: 20px;
-	text-align: center;
-	font-size: 2em;
-	margin: 0 0 2em;
-	clear: left;
-}
-
-.copiuter {
-	position: relative;
-	margin: 0 0 0 0;
-	width: 250px;
-	float: left;
-	bottom: 15px;
-	right: 50px;
-}
-
 .sobre {
 	position: relative;
 	width: 940px;
@@ -86,6 +67,8 @@ a:hover {
 	font-size: 18px;
 	margin: 0 0 10px 0;
 	text-align: left;
+	line-height: 1.5;
+
 }
 
 .sobre strong {
@@ -99,15 +82,46 @@ a:hover {
 	font-size: 1em;
 }
 
-.vantagens p {
-	text-transform: bold;
-	font-size: 20px;
+.titulo-principal {
 	text-align: center;
+	font-size: 2em;
+	margin: 5px 0 1em;
+}
 
+.pc-case {
+	width: 20%;
+	float: left;
+	margin: 0 20px 00px 0;
+}
+
+.vantagens {
+	margin-top: 80px;
+}
+
+
+.lista-beneficios {
+	width: 30%;
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 250px;
+
+}
+
+.beneficios {
+	line-height: 1.5;
+
+}
+
+.copiuter {
+	width: 30%;
 }
 
 footer {
 	text-align: center;
 	background:  url("bg.jpg");
-	padding: 40px 0;
+	padding: 20px 0;
+}
+
+.joju-logo {
+	width: 10%;
 }
