--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,10 @@ header {
 	background-color: #4feba5;
 	width: 100%;
 	height: 130px;
-	margin: 10px auto;
+	margin: 10px 0px;
 }
+
+
 
 .caixa {
 	position: relative;
@@ -24,7 +26,7 @@ nav {
 	position: relative;
 	top: 60px;
 	text-align: right;
-	color: #0000AA;
+	color: #0000AA;	
 	text-decoration: none;
 }
 
@@ -49,17 +51,18 @@ a:hover {
 	text-decoration: underline;
 }
 
-.placa-mae {
+.carro {
 	position: relative;
-	width: 100%;	
-	height: 250px;
-	transition: 500ms;
-
+	width: 100%;
+	height: 750px;
 }
 
-.placa-mae:hover {
-	opacity: 0.8;
-	transition: 400ms;
+.compiuter {
+	width: 30%;
+	float: left;
+	border-radius: 10px;
+	box-shadow: 8px 8px 10px #000000;
+	margin: 0 20px;
 }
 
 .sobre {
@@ -119,11 +122,6 @@ a:hover {
 	line-height: 1.5;
 }
 
-.copiuter {
-	width: 25%;
-	box-shadow: 5px 5px 5px #000010;
-}
-
 .depoimentos {
 	padding: 3em;
 	background: #4682B4;
@@ -142,4 +140,30 @@ footer {
 
 .joju-logo {
 	width: 10%;
+}
+
+.lista-clientes {
+	width: 100%;
+	margin-left: 50px;
+
+}
+
+.lista-clientes li {
+	display: inline-block;
+	text-align: center;
+	width: 25%;
+	margin: 0 1.5%;
+
+}
+
+.clientes {
+	border-radius: 10px;
+	border: solid 2px #000000;
+	opacity: 90%;
+	transition: 1s;
+	margin-bottom: 50px;
+}
+
+.clientes:hover {
+	transform: scale(1.1);
 }
